tests/good/test140.tig
let
  type int_array = array of int
  var a := int_array [10] of 0
in
  if 0 then
    print_int(a[10])
end
